feat: Basic Input class for future fix: Incorrect internal coordinates calculation on non-square maps